--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # 3D models
-*               text=auto
+*               text=lf
 *.3dm filter=lfs diff=lfs merge=lfs -text
 *.3ds filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
